Test for new branch

--- a/app/index.html
+++ b/app/index.html
@@ -27,8 +27,15 @@
 </head>
 
 <body>
-
-
+    <div class="navigation">
+	    <div class="container">
+	    	<div class="row">
+	    		<div class="col-sm-2 navigation-logo">PetShop</div>
+                <div class="col-sm-4 navigation-menu"></div>
+	    		<div class="col-sm-6 navigation-login"><a href="#">Sign in</a> or <a href="#">Sign up</a></div>
+	    	</div>
+	    </div>
+    </div>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
