Test for new branch

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,14 @@
 	    <div class="container">
 	    	<div class="row">
 	    		<div class="col-sm-2 navigation-logo">PetShop</div>
-                <div class="col-sm-4 navigation-menu"></div>
+                <div class="col-sm-4 navigation-menu">
+                    <ul>
+                        <li><a href="#">Place text</a></li>
+                        <li><a href="#">Place text</a></li>
+                        <li><a href="#">Place text</a></li>
+                        <li><a href="#">Place text</a></li>
+                    </ul>
+                </div>
 	    		<div class="col-sm-6 navigation-login"><a href="#">Sign in</a> or <a href="#">Sign up</a></div>
 	    	</div>
 	    </div>
