Update fonts, create nav-menu + mobile-version. Added libs: fontawesome, css-hamburgers, bootstrap 3.

--- a/app/index.html
+++ b/app/index.html
@@ -27,22 +27,31 @@
 </head>
 
 <body>
-    <div class="navigation">
+<nav class="navbar navbar-default">
 	    <div class="container">
-	    	<div class="row">
-	    		<div class="col-sm-2 navigation-logo">PetShop</div>
-                <div class="col-sm-4 navigation-menu">
-                    <ul>
-                        <li><a href="#">Place text</a></li>
-                        <li><a href="#">Place text</a></li>
-                        <li><a href="#">Place text</a></li>
-                        <li><a href="#">Place text</a></li>
-                    </ul>
-                </div>
-	    		<div class="col-sm-6 navigation-login"><a href="#">Sign in</a> or <a href="#">Sign up</a></div>
+                    <div class="contauner-fluid">
+                        <div class="navbar-header">
+                            <a type="button" class="navbar-toggle hamburger hamburger--elastic" data-toggle="collapse" data-target=".navbar-collapse">
+                                <span class="hamburger-box">
+                                    <span class="hamburger-inner"></span>
+                                </span>
+                            </a>
+                            <a href="#" class="navbar-brand"><img src="img/logo.jpg"></a>
+                        </div>
+
+                        <div class="navbar-collapse collapse">
+                            <ul class="nav navbar-nav">
+                                <li><a href="#">Dogs</a></li>
+                                <li><a href="#">Cats</a></li>
+                                <li><a href="#">Sale</a></li>
+                                <li><a href="#">Help</a></li>
+                            </ul>
+                            <div class="login"><a href="#">Sign in</a><span>or</span><a href="#">Sign up</a></div>
+                        </div>
+                    </div>
+
 	    	</div>
-	    </div>
-    </div>
+</nav>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
